...
                        AssetImage('assets/icons/registration_100px.png'),
                        size: 80,
                        color: Colors.white,
                      ),
                    )),
                const Text(
                  'Register',
                  key: Key('Register'),
                  style: TextStyle(
                      color: Colors.white, fontSize: 25, fontFamily: 'UniNeue'),
                ),
                Expanded(
                  child: SingleChildScrollView(
...
                        child: Column(
                          children: [
                            Padding(
                              padding:
                                  const EdgeInsets.only(left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('Email'),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) => validateEmail(val),
                                controller: emailController,
                                keyboardType: TextInputType.emailAddress,
                                decoration: const InputDecoration(
...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.only(
                                  top: 40, left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('Password'),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) => validatePassword(val),
                                obscureText: obscureText,
                                keyboardType: TextInputType.text,
                                controller: pwdController,
...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.only(
                                  top: 40, left: 20.0, right: 40),
                              child: TextFormField(
                                key: Key('Confirm Password'),
                                style: const TextStyle(
                                    color: Colors.white,
                                    fontFamily: 'UniNeue',
                                    fontSize: 18),
                                keyboardType: TextInputType.text,
                                validator: (val) {
...
                                      color: Colors.white, width: 1),
                                  shape: RoundedRectangleBorder(
                                      borderRadius: BorderRadius.circular(30)),
                                ),
                                onPressed: () {
                                  if (_reg1Form.currentState.validate()) {
                                    register();
                                  }
                                },
                                child: const Text(
                                  'Submit',
                                  key: Key('Submit'),
                                  style: TextStyle(
                                      color: Colors.white,
                                      fontSize: 20,
                                      fontFamily: 'UniNeue'),
                                ),
...
